RESOLVED FIXED115298
AX: [role="button"][aria-pressed] should be exposed as AXCheckbox:AXToggleButton, with role description of "toggle button"
https://bugs.webkit.org/show_bug.cgi?id=115298
Summary AX: [role="button"][aria-pressed] should be exposed as AXCheckbox:AXToggleBut...
James Craig
Reported 2013-04-26 22:22:39 PDT
buttons with aria-pressed value matching "true", "false", or "mixed" should be exposed as AXCheckbox:AXToggleButton, with role description of "toggle button" aria-pressed values of false, true, and mixed should be exposed as AXValue: 0, 1, and 2, respectively. Any other aria-pressed value (e.g. "", "undefined", "foo", etc.) should cause the role to be exposed as a standard AXButton.
Attachments
test case (1.07 KB, text/html)
2014-04-25 17:14 PDT, James Craig
no flags
patch (11.23 KB, patch)
2015-03-25 17:40 PDT, chris fleizach
no flags
style fix patch (11.23 KB, patch)
2015-03-25 17:46 PDT, chris fleizach
buildbot: commit-queue-
Archive of layout-test-results from ews100 for mac-mavericks (582.32 KB, application/zip)
2015-03-25 18:11 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-mavericks-wk2 (555.08 KB, application/zip)
2015-03-25 18:42 PDT, Build Bot
no flags
patch (11.31 KB, patch)
2015-03-25 23:28 PDT, chris fleizach
no flags
James Craig
Comment 1 2013-04-26 22:24:37 PDT
James Craig
Comment 2 2014-04-25 17:14:59 PDT
Created attachment 230228 [details] test case
chris fleizach
Comment 3 2015-03-25 17:40:45 PDT
chris fleizach
Comment 4 2015-03-25 17:41:21 PDT
It didn't even take 2 years! the system works!
WebKit Commit Bot
Comment 5 2015-03-25 17:43:24 PDT
Attachment 249453 [details] did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityObject.cpp:2232: aria_pressed is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
chris fleizach
Comment 6 2015-03-25 17:46:50 PDT
Created attachment 249454 [details] style fix patch
Build Bot
Comment 7 2015-03-25 18:11:49 PDT
Comment on attachment 249454 [details] style fix patch Attachment 249454 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6186148426678272 New failing tests: platform/mac/accessibility/aria-pressed-button-attributes.html
Build Bot
Comment 8 2015-03-25 18:11:54 PDT
Created attachment 249458 [details] Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 9 2015-03-25 18:42:19 PDT
Comment on attachment 249454 [details] style fix patch Attachment 249454 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4710484636860416 New failing tests: platform/mac/accessibility/aria-pressed-button-attributes.html
Build Bot
Comment 10 2015-03-25 18:42:24 PDT
Created attachment 249461 [details] Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
chris fleizach
Comment 11 2015-03-25 23:28:09 PDT
Mario Sanchez Prada
Comment 12 2015-03-26 03:05:55 PDT
Comment on attachment 249478 [details] patch (In reply to comment #4) > It didn't even take 2 years! the system works! Just in time!
WebKit Commit Bot
Comment 13 2015-03-26 09:36:42 PDT
Comment on attachment 249478 [details] patch Clearing flags on attachment: 249478 Committed r182012: <http://trac.webkit.org/changeset/182012>
WebKit Commit Bot
Comment 14 2015-03-26 09:36:49 PDT
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 15 2015-03-27 13:27:36 PDT
This broke Windows tests. Can you review and correct the problem? Otherwise I will roll out.
Brent Fulgham
Comment 16 2015-03-27 13:30:14 PDT
Comment on attachment 249478 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=249478&action=review > LayoutTests/platform/mac/accessibility/aria-toggle-button-with-title-expected.txt:11 > +Role: AXRole: AXCheckBox This broke Windows tests because you did not provide a Windows test expectation. Likewise, the EFL and GTK tests are failing because they have no test expectation.
chris fleizach
Comment 17 2015-03-27 13:35:46 PDT
Yes I'll take a look
Brent Fulgham
Comment 18 2015-03-27 13:41:02 PDT
Corrected test expectations committed in r182075 <http://trac.webkit.org/changeset/182075>.
chris fleizach
Comment 19 2015-03-27 14:03:04 PDT
Thanks for handling Brent (In reply to comment #18) > Corrected test expectations committed in r182075 > <http://trac.webkit.org/changeset/182075>.
Derk-Jan Hartman
Comment 20 2015-04-03 07:09:50 PDT
Very grateful that this is now apparently fixed !
Note You need to log in before you can comment on or make changes to this bug.